--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,41 +106,13 @@ section {
     position: relative;
     height: 100vh;
     width: 100%;
-    background: url(); /* Add your background image URL here */
-    background-size: cover;
-    background-position: center;
-    justify-content: flex-start;
+    background: url('../images/baju/Konsep\ Feeds.jpg');
+    background-size: 50%; /* Menutupi seluruh elemen */
+    background-position: center; /* Posisikan di tengah */
+    background-repeat: no-repeat; /* Tidak mengulang gambar */
+    background-color: #000000;
 }
 
-.home-text {
-    padding-top: 60px;
-}
-
-.home-text h1 {
-    font-size: var(--h1-font);
-    font-weight: 700;
-    line-height: 1.1;
-    
-}
-
-.home-text h6 {
-    font-size: 15px;
-    font-weight: 500;
-    color: var(--second-color);
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-}
-
-.home-text p {
-    width: 100%;
-    max-width: 560px;
-    font-size: var(--p-font);
-    font-weight: 400;
-    color: var(--second-color);
-    line-height: 33px;
-    margin-bottom: 35px;
-}
 
 .btn {
     display: inline-block;
